# academic-literature-mining-skill

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  INSTALL.MD  README.md  SKILL.md  docker-compose.native.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
assets/: research-plan.example.json  search-subagent-prompt.md  subagent-manifest.example.json  subagent-result.schema.json  subagent-task.schema.json
references/: api-contracts.md  chrome-library-access.md  citation-schema.md  project-isolation.md  quality-policy.md  query-routing.md  release-process.md  subagent-contract.md  user-interaction.md
src/: citations.rs  cli.rs  config.rs  discovery.rs  domain.rs  download.rs  main.rs  nvidia.rs  pipeline.rs  qdrant.rs  quality.rs  render.rs  state.rs  util.rs
