[package]
name = "academic-literature-mining"
version = "0.1.2"
edition = "2024"
rust-version = "1.97.1"
description = "Citation-complete academic literature mining with visual PDF retrieval"
license = "Apache-2.0"
repository = "https://github.com/Ruisi-Lu/academic-literature-mining-skill"
readme = "README.md"
publish = false

[[bin]]
name = "litmine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
pdfium-auto = "0.3.0"
pdfium-render = { version = "0.8.37", default-features = false, features = ["pdfium_latest", "image_025", "thread_safe"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
